--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
        <h3> my first website</h3> 
        <p> My village name balakhal. I ma new in Web developing.not so easy to</p>
     </div>
+    <div>
+       <h3> my second website</h3> 
+       <p> My village name balakhal. I ma new in Web developing.not so easy to</p>
+    </div>
+    <div>
+       <h3> my third website</h3> 
+       <p> My village name balakhal. I ma new in Web developing.not so easy to</p>
+    </div>
     
 </body>
 </html>
