added kim with a dim

--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
        <h3> my third website</h3> 
        <p> My village name balakhal. I ma new in Web developing.not so easy to</p>
     </div>
+    <div>
+        <h3>how to push incremental code </h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message</li>
+            <li>git push</li>
+        </ul>
+    </div>
+    <div>
+        <h3>kim kim khai everyday one single dim</h3>
+        <img src="images/kim.jpg" alt="">
+    </div>
     
 </body>
 </html>
